[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/heart.png" type="Texture" id=1]
[ext_resource path="res://Game/PlayerPanel.gd" type="Script" id=2]

[node name="PlayerPanel" type="PanelContainer"]
margin_right = 233.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( -288, -82 )
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 226.0
margin_bottom = 291.0

[node name="HeartContainer" type="HBoxContainer" parent="PlayerContainer"]
margin_right = 219.0
margin_bottom = 10.0

[node name="P1Hearts" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts2" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 14.0
margin_right = 24.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts3" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 28.0
margin_right = 38.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts4" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 42.0
margin_right = 52.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts5" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 56.0
margin_right = 66.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts6" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 70.0
margin_right = 80.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts7" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 84.0
margin_right = 94.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts8" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 98.0
margin_right = 108.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts9" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 112.0
margin_right = 122.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts10" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 126.0
margin_right = 136.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts11" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 140.0
margin_right = 150.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Hearts12" type="TextureRect" parent="PlayerContainer/HeartContainer"]
margin_left = 154.0
margin_right = 164.0
margin_bottom = 10.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="PlayerContainer"]
margin_top = 14.0
margin_right = 219.0
margin_bottom = 28.0
text = "Name: "

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerContainer"]
margin_top = 32.0
margin_right = 219.0
margin_bottom = 82.0

[node name="P1ClassSprite" type="TextureRect" parent="PlayerContainer/HBoxContainer"]
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" type="VBoxContainer" parent="PlayerContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 43.0
margin_bottom = 50.0

[node name="IconStats" type="HBoxContainer" parent="PlayerContainer/HBoxContainer/PlayerInfo"]
margin_right = 39.0
margin_bottom = 14.0

[node name="CoinIcon" type="TextureRect" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_bottom = 14.0

[node name="Coins" type="Label" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="AttackIcon" type="TextureRect" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Attack" type="Label" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 14.0

[node name="SpeedIcon" type="TextureRect" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 14.0

[node name="Speed" type="Label" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 14.0

[node name="RangeIcon" type="TextureRect" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 24.0
margin_right = 24.0
margin_bottom = 14.0

[node name="Range" type="Label" parent="PlayerContainer/HBoxContainer/PlayerInfo/IconStats"]
margin_left = 28.0
margin_right = 28.0
margin_bottom = 14.0

[node name="Score" type="Label" parent="PlayerContainer/HBoxContainer/PlayerInfo"]
margin_top = 18.0
margin_right = 39.0
margin_bottom = 32.0
text = "Score:"

[node name="Item" type="Label" parent="PlayerContainer/HBoxContainer/PlayerInfo"]
margin_top = 36.0
margin_right = 39.0
margin_bottom = 50.0
text = "Item:"
__meta__ = {
"_edit_use_anchors_": false
}
